--- a/docs/templates/template-html.html
+++ b/docs/templates/template-html.html
@@ -455,7 +455,7 @@
     <div class="navbar clear nav-top">
         <div class="row content">
             <a class="right" style="text-decoration: underline;" href="docs.pdf"><i class="fas fa-book"></i>&nbsp; PDF Documentation</a>
-            <a class="right" href="https://github.com/davidgfnet/psp-vfpu-docs"><i class="fab fa-github"></i>&nbsp; davidgfnet/psp-vfpu-docs</a>
+            <a class="right" href="https://github.com/pspdev/vfpu-docs"><i class="fab fa-github"></i>&nbsp; pspdev/vfpu-docs</a>
         </div>
     </div>
 
